[gd_scene load_steps=4 format=2]

[ext_resource path="res://Characters/Mobs/Blueprint/PassiveMob.gd" type="Script" id=1]
[ext_resource path="res://Control/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Characters/Health Bar/HealthBar.tscn" type="PackedScene" id=3]

[node name="PassiveMob" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 19
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="NewState" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Scared" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="HealthBar" parent="." instance=ExtResource( 3 )]
[connection signal="timeout" from="NewState" to="." method="_on_NewState_timeout"]
[connection signal="timeout" from="Scared" to="." method="_on_Scared_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="no_health" from="HealthBar" to="." method="dead"]
